cmake_minimum_required (VERSION 2.6)

project(WEBCHAT)
SET(CMAKE_BUILD_TYPE "Debug")
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g3 -ggdb")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")
set(SRC_LIST main.cpp)
aux_source_directory(Encrypt DIR_ENCRYPT)
set(SRC_LIST ${SRC_LIST} ${DIR_ENCRYPT})
add_executable(Chat ${SRC_LIST})
